ros2_lab2_ws/log/build_2025-09-22_08-51-46/lab02_task03/stdout_stderr.log
running egg_info
writing ../../build/lab02_task03/lab02_task03.egg-info/PKG-INFO
writing dependency_links to ../../build/lab02_task03/lab02_task03.egg-info/dependency_links.txt
writing entry points to ../../build/lab02_task03/lab02_task03.egg-info/entry_points.txt
writing requirements to ../../build/lab02_task03/lab02_task03.egg-info/requires.txt
writing top-level names to ../../build/lab02_task03/lab02_task03.egg-info/top_level.txt
reading manifest file '../../build/lab02_task03/lab02_task03.egg-info/SOURCES.txt'
writing manifest file '../../build/lab02_task03/lab02_task03.egg-info/SOURCES.txt'
running build
running build_py
copying lab02_task03/tf_listener.py -> /home/michael/robo_ai_turku_2025/ros2_lab2_ws/build/lab02_task03/build/lib/lab02_task03
copying lab02_task03/tf_listener_rev.py -> /home/michael/robo_ai_turku_2025/ros2_lab2_ws/build/lab02_task03/build/lib/lab02_task03
copying lab02_task03/tf_static_broadcaster.py -> /home/michael/robo_ai_turku_2025/ros2_lab2_ws/build/lab02_task03/build/lib/lab02_task03
copying lab02_task03/tf_scanner.py -> /home/michael/robo_ai_turku_2025/ros2_lab2_ws/build/lab02_task03/build/lib/lab02_task03
copying lab02_task03/tf_broadcaster.py -> /home/michael/robo_ai_turku_2025/ros2_lab2_ws/build/lab02_task03/build/lib/lab02_task03
running install
running install_lib
copying /home/michael/robo_ai_turku_2025/ros2_lab2_ws/build/lab02_task03/build/lib/lab02_task03/tf_listener.py -> /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03
copying /home/michael/robo_ai_turku_2025/ros2_lab2_ws/build/lab02_task03/build/lib/lab02_task03/tf_listener_rev.py -> /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03
copying /home/michael/robo_ai_turku_2025/ros2_lab2_ws/build/lab02_task03/build/lib/lab02_task03/tf_static_broadcaster.py -> /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03
copying /home/michael/robo_ai_turku_2025/ros2_lab2_ws/build/lab02_task03/build/lib/lab02_task03/tf_scanner.py -> /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03
copying /home/michael/robo_ai_turku_2025/ros2_lab2_ws/build/lab02_task03/build/lib/lab02_task03/tf_broadcaster.py -> /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03
byte-compiling /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03/tf_listener.py to tf_listener.cpython-310.pyc
byte-compiling /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03/tf_listener_rev.py to tf_listener_rev.cpython-310.pyc
byte-compiling /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03/tf_static_broadcaster.py to tf_static_broadcaster.cpython-310.pyc
byte-compiling /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03/tf_scanner.py to tf_scanner.cpython-310.pyc
byte-compiling /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03/tf_broadcaster.py to tf_broadcaster.cpython-310.pyc
  File "/home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03/tf_listener_rev.py", line 23
    tr = self.tf_buffer.lookup_transform('map', s'robot', rclpy.time.Time())
                                                 ^^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/lab02_task03/lab02_task03.egg-info to /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/python3.10/site-packages/lab02_task03-0.0.0-py3.10.egg-info
running install_scripts
Installing tf_broadcaster script to /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/lab02_task03
Installing tf_listener script to /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/lab02_task03
Installing tf_listener_rev script to /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/lab02_task03
Installing tf_scanner script to /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/lab02_task03
Installing tf_static_broadcaster script to /home/michael/robo_ai_turku_2025/ros2_lab2_ws/install/lab02_task03/lib/lab02_task03
writing list of installed files to '/home/michael/robo_ai_turku_2025/ros2_lab2_ws/build/lab02_task03/install.log'
